- Thay ảnh search tutorial => ok - Bỏ popup hướng dẫn ở search opponent => ok - Hiện hướng dẫn trợ giúp => ok - Hiện avatar người chơi ở dưới đáp án =>ok

--- a/Faster5/app/src/main/res/layout/info_screen.xml
+++ b/Faster5/app/src/main/res/layout/info_screen.xml
@@ -176,7 +176,7 @@
     </LinearLayout>
 
     <include
-        android:id="@+id/layout_tutorial"
+        android:id="@+id/layout_tutorial_search"
         layout="@layout/layout_tutorial_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
