--- a/Faster5/app/src/main/res/layout/layout_report_popup.xml
+++ b/Faster5/app/src/main/res/layout/layout_report_popup.xml
@@ -37,7 +37,6 @@
             android:layout_marginRight="@dimen/layout_marginRight_10"
             android:layout_marginTop="@dimen/layout_marginTop_30"
             android:gravity="center"
-            android:maxLines="2"
             android:paddingLeft="@dimen/paddingLeft_10"
             android:paddingRight="@dimen/paddingRight_10"
             android:text="@string/text_report"
@@ -56,6 +55,22 @@
             android:background="@drawable/answer0"
             android:paddingBottom="@dimen/paddingBottom_10"
             android:text="@string/btn_report"
+            android:textAllCaps="false"
+            android:textColor="#ffffff"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/button_rate"
+            android:layout_width="@dimen/layout_width_250"
+            android:layout_height="@dimen/layout_height_50"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/layout_marginLeft_30"
+            android:layout_marginRight="@dimen/layout_marginRight_30"
+            android:layout_marginTop="@dimen/layout_marginTop_10"
+            android:background="@drawable/answer0"
+            android:paddingBottom="@dimen/paddingBottom_10"
+            android:text="@string/text_rate"
             android:textAllCaps="false"
             android:textColor="#ffffff"
             android:textSize="@dimen/text_size_large"
