--- a/Faster5/app/src/main/res/layout/layout_avatar_reply.xml
+++ b/Faster5/app/src/main/res/layout/layout_avatar_reply.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/layout_marginRight_10"
-        android:layout_marginEnd="@dimen/layout_marginRight_10"
-        android:layout_marginTop="@dimen/layout_marginBottom_25">
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageview_useravatar1"
+        android:layout_width="@dimen/layout_marginBottom_25"
+        android:layout_height="@dimen/layout_marginBottom_25"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        app:civ_border_color="#fff"
+        app:civ_border_width="@dimen/civ_border_width_1"/>
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageview_useravatar1"
-            android:layout_width="@dimen/layout_marginBottom_25"
-            android:layout_height="@dimen/layout_marginBottom_25"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            app:civ_border_color="#fff"
-            app:civ_border_width="@dimen/civ_border_width_1" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageview_useravatar2"
-            android:layout_width="@dimen/layout_marginBottom_25"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="@dimen/layout_marginBottom_20"
-            android:layout_marginEnd="@dimen/layout_marginBottom_20"
-            android:layout_height="@dimen/layout_marginBottom_25"
-            app:civ_border_color="#fff"
-            app:civ_border_width="@dimen/civ_border_width_1" />
-    </RelativeLayout>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageview_useravatar2"
+        android:layout_width="@dimen/layout_marginBottom_25"
+        android:layout_height="@dimen/layout_marginBottom_25"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="@dimen/layout_marginBottom_20"
+        android:layout_marginRight="@dimen/layout_marginBottom_20"
+        app:civ_border_color="#fff"
+        app:civ_border_width="@dimen/civ_border_width_1"/>
 </RelativeLayout>
