--- a/Faster5/app/src/main/res/values/colors.xml
+++ b/Faster5/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#004b91</color>
     <color name="colorAccent">#004b91</color>
     <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
     <color name="RED">#ff0000</color>
     <color name="ALTP">#00366D</color>
 </resources>
